# assets-manager

./: CPU.hpp  Makefile.am  RAM.hpp  README.md  assets-manager.service.in  configure.ac  main.cpp
xyz/openbmc_project/Assets/: CPU.interface.yaml  RAM.interface.yaml
